# docs/swagger.json
@@ -29,32 +29,32 @@
                         "type": "string",
                         "default": "0",
                         "description": "page",
-                        "name": "_page",
+                        "name": "page",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "default": "5",
                         "description": "size",
-                        "name": "_size",
+                        "name": "size",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "sort",
-                        "name": "_sort",
+                        "name": "sort",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "filter",
-                        "name": "_filter",
+                        "name": "filter",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "global filter",
-                        "name": "_q",
+                        "name": "search",
                         "in": "query"
                     }
                 ],
@@ -111,7 +111,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.MBiodataRequest"
+                            "$ref": "#/definitions/m_biodata.MBiodataRequest"
                         }
                     }
                 ],
@@ -168,7 +168,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.MBiodataRequest"
+                            "$ref": "#/definitions/m_biodata.MBiodataRequest"
                         }
                     }
                 ],
@@ -337,32 +337,32 @@
                         "type": "string",
                         "default": "0",
                         "description": "page",
-                        "name": "_page",
+                        "name": "page",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "default": "5",
                         "description": "size",
-                        "name": "_size",
+                        "name": "size",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "sort",
-                        "name": "_sort",
+                        "name": "sort",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "filter",
-                        "name": "_filter",
+                        "name": "filter",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "global filter",
-                        "name": "_q",
+                        "name": "search",
                         "in": "query"
                     }
                 ],
@@ -419,7 +419,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.MModuleRequest"
+                            "$ref": "#/definitions/m_module.MModuleRequest"
                         }
                     }
                 ],
@@ -476,7 +476,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.MModuleRequest"
+                            "$ref": "#/definitions/m_module.MModuleRequest"
                         }
                     }
                 ],
@@ -645,32 +645,32 @@
                         "type": "string",
                         "default": "0",
                         "description": "page",
-                        "name": "_page",
+                        "name": "page",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "default": "5",
                         "description": "size",
-                        "name": "_size",
+                        "name": "size",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "sort",
-                        "name": "_sort",
+                        "name": "sort",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "filter",
-                        "name": "_filter",
+                        "name": "filter",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "global filter",
-                        "name": "_q",
+                        "name": "search",
                         "in": "query"
                     }
                 ],
@@ -727,7 +727,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.MRoleRequest"
+                            "$ref": "#/definitions/m_role.MRoleRequest"
                         }
                     }
                 ],
@@ -784,7 +784,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.MRoleRequest"
+                            "$ref": "#/definitions/m_role.MRoleRequest"
                         }
                     }
                 ],
@@ -953,32 +953,32 @@
                         "type": "string",
                         "default": "0",
                         "description": "page",
-                        "name": "_page",
+                        "name": "page",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "default": "5",
                         "description": "size",
-                        "name": "_size",
+                        "name": "size",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "sort",
-                        "name": "_sort",
+                        "name": "sort",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "filter",
-                        "name": "_filter",
+                        "name": "filter",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "global filter",
-                        "name": "_q",
+                        "name": "search",
                         "in": "query"
                     }
                 ],
@@ -1035,7 +1035,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.MUserRequest"
+                            "$ref": "#/definitions/m_user.MUserRequest"
                         }
                     }
                 ],
@@ -1092,7 +1092,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.MUserRequest"
+                            "$ref": "#/definitions/m_user.MUserRequest"
                         }
                     }
                 ],
@@ -1238,39 +1238,10 @@
         }
     },
     "definitions": {
-        "domain.MBiodataRequest": {
-            "type": "object",
-            "required": [
-                "id"
-            ],
-            "properties": {
-                "fullname": {
-                    "type": "string",
-                    "maxLength": 255
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "image": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                },
-                "imagePath": {
-                    "type": "string",
-                    "maxLength": 255
-                },
-                "isDelete": {
-                    "type": "boolean"
-                },
-                "mobilePhone": {
-                    "type": "string",
-                    "maxLength": 15
-                }
-            }
+        "m_biodata.MBiodataRequest": {
+            "type": "object"
         },
-        "domain.MModuleRequest": {
+        "m_module.MModuleRequest": {
             "type": "object",
             "properties": {
                 "id": {
@@ -1285,7 +1256,7 @@
                 }
             }
         },
-        "domain.MRoleRequest": {
+        "m_role.MRoleRequest": {
             "type": "object",
             "properties": {
                 "code": {
@@ -1307,7 +1278,7 @@
                 }
             }
         },
-        "domain.MUserRequest": {
+        "m_user.MUserRequest": {
             "type": "object",
             "required": [
                 "id"
